--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         }
                     });
                     response(matches);
+                    console.log(matches);
                 },
                 select: function (event, ui) {
                     var selectedObj = ui.item;
