geolocation should now go to map site and show your location

--- a/startpage.html
+++ b/startpage.html
@@ -10,7 +10,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/getGeolocation.js"></script>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="styles/stylesheet.css" media="all" />
 </head>
 <body>
 
@@ -24,7 +24,7 @@
 		
 		<div id="searchBox">
 			<form action="page.php" method="get">
-				<input id="searchField" type="text" name="search" placeholder="Station or Train number" /><input id="searchBtn" type="submit" value="" />
+				<input id="searchField" type="text" name="search" placeholder="E.g. Stockholm C, Tåg 420" /><input id="searchBtn" type="submit" value="" />
 				<button id="geoBtn" type="button"><img src="img/gps_pointer.png"><p class="message">See stations near me!</p></button>
 			</form>
 		</div>
