fixed geotag animation

--- a/startpage.html
+++ b/startpage.html
@@ -21,7 +21,7 @@
 			
 			<div id="searchBox">
 				<form action="page.php" method="get">
-					<input id="searchField" type="text" name="search" placeholder="E.g. Stockholm C, Tåg 420" /><input id="searchBtn" type="submit" value="" />
+					<input id="searchField" type="text" name="search" placeholder="E.g. Stockholm C, Tåg 420" autofocus/><input id="searchBtn" type="submit" value="" />
 					<button id="geoBtn" type="button"><img src="img/gps_pointer.png"></button>
 				</form>
 			</div>
