tried another test bg for main page

--- a/startpage.html
+++ b/startpage.html
@@ -16,7 +16,7 @@
 	<div id="container">
 		<div id="content">
 			<header class="transparent">
-				<h1 id="logo">LOGO</h1>
+				<h1 id="logo">TågInfo</h1>
 			</header>
 			
 			<div id="searchBox">
